Modify a small part of the style
